<resources>
    <string name="app_name">CodeByte</string>
    <string name="login">Inicia Sesión</string>
    <string name="introduce_tus_datos">Intoduce tus datos</string>
    <string name="email">Correo electrónico</string>
    <string name="password">Contraseña</string>
    <string name="keep_session_bttn">Mantén la sesión iniciada</string>
    <string name="google">Google</string>
    <string name="github">GitHub</string>
    <string name="forgot_password">Has olvidado la contraseña?</string>
    <string name="no_tienes_cuenta">Aún no tienes cuenta?</string>
    <string name="recupera_contraseña">Recupera</string>
    <string name="signup">Registrate</string>
    <string name="terminos">Acepto los términos y la política de privacidad.</string>
    <string name="ya_cuenta">Ya tienes cuenta?</string>
    <string name="username">NombreDeUsuario</string>
    <string name="correotest">user@correo.com</string>
    <string name="cambiar_nombre">Cambiar Nombre</string>
    <string name="cambiar_contraseña">Cambiar Contraseña</string>
    <string name="cambiar_correo">Cambiar Correo</string>
    <string name="problem_report">Algún problema? Háznoslo saber:</string>
    <string name="textbox_problem_report">Indicanos tu problema</string>
    <string name="guardar">Guardar</string>
    <string name="envia">Envía</string>
    <string name="cancelar">Cancelar</string>
    <string name="nuevo_nombre_usuario_hint">Nuevo nombre de usuario </string>
    <string name="contrasena_actual_hint">Contraseña actual</string>
    <string name="nueva_contrasena_hint">Nueva contraseña</string>
    <string-array name="idiomas">
        <item>Castellano</item>
        <item>Catalán</item>
    </string-array>
    <string name="lenguaje">Lenguaje actual</string>
    <string name="start">Start</string>
    <string name="introduce_correo">Introduce tu correo</string>
    <string name="recupera_pwd">Recupera tu contraseña</string>
    <string name="recupera">Recuperar</string>

    <string name="capitulo_prueba">Capitulo X: Prueba</string>
    <string name="descripcion_capitulo_prueba">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
        Cras tincidunt ligula erat, nec pharetra augue viverra ac. Vivamus tempor sed libero eu sollicitudin.
        Donec ac eleifend quam. Nam aliquet erat ut aliquet posuere. Donec porttitor in elit ac iaculis.
        Quisque at tortor pulvinar sem tempus congue vel eu leo. </string>

    <string name="en_curso">En Curso</string>
    <string name="continuee">Continue</string>
    <string name="coming_soon">Coming Soon...</string>
    <string name="return_home">Go to Home</string>


    <!--Content Descriptions-->

    <string name="cd_PROFILEACTIVITY_logo_profile_asset">Icono del perfil, decoración</string>
    <string name="cd_PROFILEACTIVITY_logo_menu_asset">Icono-boton del menú lateral desplegable</string>
    <string name="cd_PROFILEACTIVITY_profile_picture">Foto de perfil del usuario</string>
    <string name="cd_PROFILEACTIVITY_logo_add_photo_asset">Icono-boton para cambiar la foto de perfil</string>
    <string name="boton_cambiar_foto_perfil">Boton cambiar foto perfil</string>
    <string name="error_empty_password">Error contraseña vacia</string>
    <string name="error_empty_email">Error contraseña vacia</string>
    <string name="nuevo_email_hint">Email nuevo</string>
    <string name="password_hint">Contraseña actual</string>
    <string name="enviar_problema_hint">Indicanos aqui el problema</string>
    <string name="home">Home</string>
    <string name="notifications">Notificaciones</string>
    <string name="profile">Perfil</string>
    <string name="statistics">Estadisticas</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="all_lenguajes">All lenguajes</string>
    <string name="change_email_dialog_title">Cambiar email</string>
    <string name="change_email_dialog_hint">Nuevo correo</string>
    <string name="change_email_dialog_password_hint">Contraseña</string>
    <string name="change_email_dialog_confirm_password_hint">Repite la contraseña</string>
    <string name="change_email_dialog_positive_button">Aceptar</string>
    <string name="change_email_dialog_password_mismatch_error">Las contraseñas no coinciden</string>
    <string name="change_email_dialog_negative_button">Cancelar</string>
    <string name="change_password_dialog_title">Cambiar contraseña</string>
    <string name="change_password_dialog_current_password_hint">Contraseña</string>
    <string name="change_password_dialog_new_password_hint">Nueva contraseña</string>
    <string name="change_password_dialog_confirm_password_hint">Confirma la nueva contraseña</string>
    <string name="change_password_dialog_positive_button">Aceptar</string>
    <string name="change_password_dialog_password_mismatch_error">Las contraseñas no coinciden</string>
    <string name="change_password_dialog_negative_button">Cancelar</string>
    <string name="first_fragment_label" />
    <string name="second_fragment_label" />
    <string name="spanish">Español</string>
    <string name="catalan">Catalan</string>
    <string name="python">Python</string>
    <string name="texto_ejemplo_leccion">Para declarar (crear) una *variable*, debes darle un nombre. En *Python* no hace falta especificar el tipo de variable que trabajarás. Para dar un valor, usamos el operando \'*=*\' y asignamos a la derecha del igual un valor.</string>


</resources>