<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/navigation_bar_home"
        android:icon="@drawable/ic_home"
        android:title="@string/home"
        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/navigation_bar_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile"
        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/navigation_bar_statistics"
        android:icon="@drawable/ic_statistics"
        android:title="@string/statistics"
        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/navigation_bar_lenguajes"
        android:icon="@drawable/ic_all_languages"
        android:title="@string/all_lenguajes"
        app:showAsAction="ifRoom|withText" />
</menu>
