<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.main.profile.ProfileFragment">

    <ImageView
        android:id="@+id/ProfileAssetLogo_ProfileFragment_imageView"
        android:layout_width="32dp"
        android:layout_height="31dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/cd_PROFILEACTIVITY_logo_profile_asset"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.001"
        app:srcCompat="@drawable/icon_profile" />

    <ImageView
        android:id="@+id/UserImage_ProfileFragment_imageView"
        android:layout_width="0dp"
        android:layout_height="124dp"
        android:layout_marginStart="130dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="130dp"
        android:contentDescription="@string/cd_PROFILEACTIVITY_profile_picture"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/default_user_image_foreground" />

    <TextView
        android:id="@+id/Username_ProfileFragment_textView"
        android:layout_width="127dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:fontFamily="@font/quicksand_bold"
        android:text="@string/username"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/UserImage_ProfileFragment_imageView"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/Mail_ProfileFragment_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/quicksand_medium"
        android:text="@string/correotest"
        android:textAlignment="center"
        android:textColor="#B1B1B1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Username_ProfileFragment_textView"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/ChangeUsername_ProfileFragment_bttn"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:backgroundTint="#9C5CF5"
        android:text="@string/cambiar_nombre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Mail_ProfileFragment_textView"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/ChangePassword_ProfileFragment_bttn"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:backgroundTint="#9C5CF5"
        android:text="@string/cambiar_contraseña"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ChangeMail_ProfileFragment_bttn"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/ChangeMail_ProfileFragment_bttn"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:backgroundTint="#9C5CF5"
        android:text="@string/cambiar_correo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ChangeUsername_ProfileFragment_bttn"
        tools:ignore="TextContrastCheck" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="298dp"
        android:layout_height="205dp"
        android:layout_marginTop="16dp"
        android:background="#EAEAEA"
        android:backgroundTint="#EAEAEA"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ChangePassword_ProfileFragment_bttn">

        <Button
            android:id="@+id/SendComment_ProfileFragment_bttn"
            android:layout_width="100dp"
            android:layout_height="48dp"
            android:backgroundTint="#9C5CF5"
            android:text="@string/envia"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/outlinedTextField"
            tools:ignore="TextContrastCheck" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/outlinedTextField"
            android:layout_width="258dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            app:boxStrokeWidth="2dp"
            app:helperTextEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ReportProblem_ProfileFragment_textView">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/Issue_ProfileFragment_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                android:fontFamily="@font/quicksand_medium"
                android:gravity="top|left"
                android:hint="@string/enviar_problema_hint"
                android:inputType="textMultiLine"
                android:lineSpacingExtra="14sp"
                android:maxLines="3"
                android:minLines="3"
                android:textSize="16sp" />

        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/ReportProblem_ProfileFragment_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/quicksand_bold"
            android:text="@string/problem_report"
            android:textStyle="bold|italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/ChangeLanguageButton_ProfileFragment_bttn"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="4dp"
        android:iconTint="@color/white"
        android:text="@string/spanish"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>
