<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.login.LoginActivity">

    <TextView
        android:id="@+id/ForgotPassword_LessonActivity_textView"
        android:layout_width="196dp"
        android:layout_height="22dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="44dp"
        android:fontFamily="@font/quicksand_bold"
        android:text="@string/forgot_password"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/RecuperarContraseña_LessonActivity_bttn"
        app:layout_constraintHorizontal_bias="0.092"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Google_LessonActivity_buttn"
        tools:ignore="TextSizeCheck,VisualLintBounds" />

    <TextView
        android:id="@+id/NonExistingAccount_LessonActivity_textView"
        android:layout_width="196dp"
        android:layout_height="22dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/quicksand_bold"
        android:text="@string/no_tienes_cuenta"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/SignUp_LessonActivity_bttn"
        app:layout_constraintHorizontal_bias="0.106"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ForgotPassword_LessonActivity_textView"
        app:layout_constraintVertical_bias="0.459"
        tools:ignore="TextSizeCheck,VisualLintBounds" />

    <TextView
        android:id="@+id/MailText_ForgotPasswordLayout_textView"
        android:layout_width="253dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/quicksand_medium"
        android:text="@string/login"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.196"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Logo_ForgotPasswordLayout_textView"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/ForgottenPassword_ForgotPasswordLayout_textView"
        android:layout_width="241dp"
        android:layout_height="25dp"
        android:fontFamily="@font/quicksand_bold"
        android:text="@string/introduce_tus_datos"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.182"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/MailText_ForgotPasswordLayout_textView"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/Email_LessonActivity_textView"
        android:layout_width="241dp"
        android:layout_height="25dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/quicksand_bold"
        android:text="@string/email"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ForgottenPassword_ForgotPasswordLayout_textView"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/Password_LessonActivity_textView"
        android:layout_width="241dp"
        android:layout_height="25dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/quicksand_bold"
        android:text="@string/password"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RecuperarContraseña_ForgotPasswordLayout_editText"
        tools:ignore="TextSizeCheck" />

    <ImageView
        android:id="@+id/Logo_ForgotPasswordLayout_textView"
        android:layout_width="102dp"
        android:layout_height="121dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_launcher"
        tools:ignore="ContentDescription,ImageContrastCheck" />

    <EditText
        android:id="@+id/RecuperarContraseña_ForgotPasswordLayout_editText"
        android:layout_width="337dp"
        android:layout_height="48dp"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Email_LessonActivity_textView"
        tools:ignore="Autofill,DuplicateSpeakableTextCheck" />

    <EditText
        android:id="@+id/EditarContraseña_LessonActivity_editText"
        android:layout_width="337dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Password_LessonActivity_textView"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <Button
        android:id="@+id/RecuperarPassword_ForgotPasswordLayout_bttn"
        android:layout_width="343dp"
        android:layout_height="52dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="#8D5CF2"
        android:fontFamily="@font/quicksand_bold"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EditarContraseña_LessonActivity_editText"
        tools:ignore="DuplicateSpeakableTextCheck,VisualLintButtonSize" />

    <Button
        android:id="@+id/GitHub_LessonActivity_buttn"
        android:layout_width="157dp"
        android:layout_height="59dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="#425892"
        android:drawableTop="@drawable/github_logo"
        android:fontFamily="@font/quicksand_bold"
        android:text="@string/github"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/KeepSession_LessonActivity_checkBox" />

    <Button
        android:id="@+id/Google_LessonActivity_buttn"
        android:layout_width="158dp"
        android:layout_height="57dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="5dp"
        android:backgroundTint="#EAEAEA"
        android:drawableTop="@drawable/google_logo_1"
        android:fontFamily="@font/quicksand_bold"
        android:text="@string/google"
        android:textColor="#1268B3"
        app:layout_constraintEnd_toStartOf="@+id/GitHub_LessonActivity_buttn"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/KeepSession_LessonActivity_checkBox" />

    <CheckBox
        android:id="@+id/KeepSession_LessonActivity_checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/keep_session_bttn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RecuperarPassword_ForgotPasswordLayout_bttn" />

    <Button
        android:id="@+id/RecuperarContraseña_LessonActivity_bttn"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="1dp"
        android:backgroundTint="#FFFFFF"
        android:fontFamily="@font/quicksand_bold"
        android:text="@string/recupera_contraseña"
        android:textColor="@color/purple_codebyte"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/SignUp_LessonActivity_bttn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/GitHub_LessonActivity_buttn"
        tools:ignore="MissingConstraints,VisualLintBounds" />

    <Button
        android:id="@+id/SignUp_LessonActivity_bttn"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:backgroundTint="#FFFFFF"
        android:fontFamily="@font/quicksand_bold"
        android:text="@string/signup"
        android:textColor="@color/purple_codebyte"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RecuperarContraseña_LessonActivity_bttn"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="MissingConstraints,VisualLintBounds" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

</androidx.constraintlayout.widget.ConstraintLayout>