<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.forgotPassword.ForgotPasswordActivity">

    <TextView
        android:id="@+id/MailText_ForgotPasswordLayout_textView"
        android:layout_width="342dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/quicksand_medium"
        android:text="@string/introduce_correo"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.449"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Logo_ForgotPasswordLayout_textView"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/ForgottenPassword_ForgotPasswordLayout_textView"
        android:layout_width="241dp"
        android:layout_height="25dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/quicksand_bold"
        android:text="@string/recupera_pwd"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/MailText_ForgotPasswordLayout_textView"
        tools:ignore="TextSizeCheck" />

    <ImageView
        android:id="@+id/Logo_ForgotPasswordLayout_textView"
        android:layout_width="102dp"
        android:layout_height="121dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_launcher"
        tools:ignore="ContentDescription,ImageContrastCheck" />

    <EditText
        android:id="@+id/RecuperarContraseña_ForgotPasswordLayout_editText"
        android:layout_width="337dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.418"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ForgottenPassword_ForgotPasswordLayout_textView"
        tools:ignore="Autofill,DuplicateSpeakableTextCheck" />

    <Button
        android:id="@+id/RecuperarPassword_ForgotPasswordLayout_bttn"
        android:layout_width="343dp"
        android:layout_height="52dp"
        android:layout_marginTop="28dp"
        android:backgroundTint="#8D5CF2"
        android:fontFamily="@font/quicksand_bold"
        android:text="@string/recupera"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RecuperarContraseña_ForgotPasswordLayout_editText"
        tools:ignore="DuplicateSpeakableTextCheck,VisualLintButtonSize" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

</androidx.constraintlayout.widget.ConstraintLayout>